# ximera

./: Cargo.toml  README.md
assets/atoms/periodic_table/: carbon.toml  copper.ron  helium.ron  silicon.ron  uranium.ron
assets/shaders/: default.wgsl
src/: app.rs  geometry.rs  lib.rs  main.rs  object.rs  types.rs  utils.rs
src/app/: app.rs  asset_loader_module.rs  asset_manager.rs  errors.rs  input_handler.rs  input_handler_module.rs  input_module.rs  mod.rs
src/app/input_handler/: input_handler.rs  input_handler_module.rs  mod.rs
src/app/input_handler/modules/: camera.rs  mod.rs  movement.rs  test.rs
src/assets/atoms/periodic_table/: carbon.ron  hydrogen.ron  nitrogen.ron  oxygen.ron
src/assets/shaders/: dummy.wgsl  model.wgsl
src/atom/: atom.rs  atom_object.rs  mod.rs
src/atom/app_modules/: PeriodicTableAM.rs  mod.rs
src/render/: camera.rs  colours.rs  geometry.rs  mesh.rs  mesh_builder.rs  mod.rs  model.rs  model_builder.rs  quad.rs  renderer.rs  shaders.rs
src/render/pipelines/: mesh_debug.rs  mod.rs  model.rs
src/renderer/: camera.rs  geometry.rs  location.rs  mod.rs  quad.rs  renderer.rs  scene.rs  utils.rs
src/renderer/scene/: mod.rs  scene.rs  scene_loader.rs  scene_object.rs
src/scene/: mod.rs  object.rs  position.rs  scene.rs  scene_object.rs  scene_object_manager.rs
src/shaders/: default.wgsl
