[package]
name = "ximera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
wgpu = "0.16.2"
winit = "0.28.6"

[dependencies.tokio]
version = "1.29.1"
features = ["rt"]
