[package]
name = "ximera"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["rt"] }
ron = "0.8.0"
serde = { version = "1.0.183", features = ["serde_derive"] }
uid = "0.1.7"
wgpu = "0.16.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
winit = "0.28.6"
cgmath = "0.18.0"
instant = "0.1.12"
